--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -8,6 +8,10 @@ on:
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
+    
+    permissions:
+      contents: write
+      
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v4
@@ -16,7 +20,7 @@ jobs:
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: '3.2'
-          bundler-cache: true # Installs and caches gems
+          bundler-cache: true
 
       - name: Build Jekyll site 🏗️
         run: bundle exec jekyll build
@@ -26,5 +30,3 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./_site
-          # If you're using a custom domain, add it here
-          # cname: your.domain.com
